@@ -282,8 +282,16 @@ void cMaps::load()
 {
 	basePath = Config::instance()->mulPath();
 
-	registerMap( 0, "map0.mul", 768, 512, "statics0.mul", "staidx0.mul" );
-	registerMap( 1, "map0.mul", 768, 512, "statics0.mul", "staidx0.mul" );
+	if ( Config::instance()->usesMondainsLegacyMap() )
+	{
+		registerMap( 0, "map0.mul", 896, 512, "statics0.mul", "staidx0.mul" );
+		registerMap( 1, "map0.mul", 896, 512, "statics0.mul", "staidx0.mul" );
+	}
+	else
+	{
+		registerMap( 0, "map0.mul", 768, 512, "statics0.mul", "staidx0.mul" );
+		registerMap( 1, "map0.mul", 768, 512, "statics0.mul", "staidx0.mul" );
+	}
 	registerMap( 2, "map2.mul", 288, 200, "statics2.mul", "staidx2.mul" );
 	registerMap( 3, "map3.mul", 320, 256, "statics3.mul", "staidx3.mul" );
 	registerMap( 4, "map4.mul", 181, 181, "statics4.mul", "staidx4.mul" );
